--- a/demo-chart-1/templates/deployment.yaml
+++ b/demo-chart-1/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
         - name: {{ .Chart.Name }}
           env:
           - name: ENV_NAME
-            value: "dd"
+            value: {{ .Values.envName }}
           {{- with .Values.securityContext }}
           securityContext:
             {{- toYaml . | nindent 12 }}
